Add description to avoid warnings about native access